--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,12 @@
   --foreground: #171717;
 }
 
+@theme{
+  --color-white:#ffffff;
+  --color-black:#000000;
+
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
