--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,8 +9,9 @@
   --color-black:#000000;
   --color-theme-bg: #f7f7f4;
   --color-theme-fg: #26251e;
-
+  --color-h1:"#000000";
 }
+
 
 @theme inline {
   --color-background: var(--background);
@@ -50,6 +51,8 @@
   --radius-md:calc(var(--radius) - 2px);
   --radius-lg:var(--radius);
   --radius-xl:calc(var(--radius) + 4px);
+  --color-orange:"#f54e00"
+  
 }
 
 :root {
@@ -85,7 +88,8 @@
   --sidebar-accent-foreground:oklch(0.205 0 0);
   --sidebar-border:oklch(0.922 0 0);
   --sidebar-ring:oklch(0.708 0 0);
-
+  
+  --color-orange:"#f54e00"
 }
 
 .dark {
